--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "simple-express-app",
   "version": "1.0.0",
   "description": "A simple Node.js Express application",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "keywords": [
     "express",
@@ -15,11 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
